--- a/Downloads/regtech_nextjs_frontend/package.json
+++ b/Downloads/regtech_nextjs_frontend/package.json
@@ -53,18 +53,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
-    "crypto": "latest",
     "date-fns": "4.1.0",
     "dotenv": "latest",
     "embla-carousel-react": "latest",
-    "fs": "latest",
     "input-otp": "latest",
     "jose": "latest",
     "lucide-react": "^0.454.0",
     "mysql2": "latest",
     "next": "14.2.4",
     "next-themes": "latest",
-    "path": "latest",
     "react": "18.3.1",
     "react-day-picker": "latest",
     "react-dom": "18.3.1",
@@ -77,7 +74,11 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "latest",
     "vaul": "latest",
-    "zod": "3.25.76"
+    "zod": "3.25.76",
+    "http": "0.0.1-security",
+    "crypto": "1.0.1",
+    "fs": "0.0.1-security",
+    "path": "0.12.7"
   },
   "devDependencies": {
     "@jest/globals": "30.2.0",
