--- a/Downloads/regtech_nextjs_frontend/package.json
+++ b/Downloads/regtech_nextjs_frontend/package.json
@@ -77,7 +77,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "latest",
     "vaul": "latest",
-    "zod": "3.25.76"
+    "zod": "3.25.76",
+    "http": "0.0.1-security"
   },
   "devDependencies": {
     "@jest/globals": "30.2.0",
